// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with all possible values 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "height": 125.55294117647058,
        "width": "100%",
      },
      {
        "overflow": "hidden",
      },
      {
        "backgroundColor": "#DEF263",
      },
      {
        "justifyContent": "center",
      },
      {
        "borderTopLeftRadius": 31.388235294117646,
        "borderTopRightRadius": 31.388235294117646,
      },
      {
        "marginTop": 47.08235294117647,
      },
    ]
  }
  testID="cryptoListObject"
>
  <Text
    style={
      [
        {
          "color": "#1414141F",
        },
        {
          "fontFamily": "Inter-Black",
        },
        {
          "fontSize": 150.4,
          "includeFontPadding": false,
          "letterSpacing": -2,
          "lineHeight": 150.4,
          "marginLeft": -4,
          "marginTop": -8,
        },
      ]
    }
  >
    BTC
  </Text>
  <View
    style={
      [
        {
          "position": "absolute",
        },
        {
          "height": "100%",
          "width": "100%",
        },
        {
          "justifyContent": "center",
        },
        {
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "flex": 1,
          },
          {
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#141414",
            },
            {
              "fontFamily": "Inter-SemiBold",
            },
            {
              "fontSize": 21.485714285714284,
              "includeFontPadding": false,
              "letterSpacing": 0,
            },
            {
              "marginLeft": 31.388235294117646,
            },
          ]
        }
      >
        test crypto
      </Text>
    </View>
    <View
      style={
        [
          {
            "flex": 1,
          },
          {
            "justifyContent": "space-evenly",
          },
          {
            "alignItems": "flex-end",
          },
          {
            "paddingRight": 31.388235294117646,
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#141414",
            },
            {
              "fontFamily": "Inter-SemiBold",
            },
            {
              "fontSize": 18.8,
              "includeFontPadding": false,
              "letterSpacing": 0,
            },
          ]
        }
      >
        $1232134.33
      </Text>
      <Text
        style={
          [
            {
              "color": "#141414A3",
            },
            {
              "fontFamily": "Inter-SemiBold",
            },
            {
              "fontSize": 18.8,
              "includeFontPadding": false,
              "letterSpacing": 0,
            },
          ]
        }
      >
        12.123 BTC
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders correctly with no values 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "height": 125.55294117647058,
        "width": "100%",
      },
      {
        "overflow": "hidden",
      },
      {
        "backgroundColor": "#DEF263",
      },
      {
        "justifyContent": "center",
      },
      false,
      undefined,
    ]
  }
  testID="cryptoListObject"
>
  <Text
    style={
      [
        {
          "color": "#1414141F",
        },
        {
          "fontFamily": "Inter-Black",
        },
        {
          "fontSize": 150.4,
          "includeFontPadding": false,
          "letterSpacing": -2,
          "lineHeight": 150.4,
          "marginLeft": -4,
          "marginTop": -8,
        },
      ]
    }
  />
  <View
    style={
      [
        {
          "position": "absolute",
        },
        {
          "height": "100%",
          "width": "100%",
        },
        {
          "justifyContent": "center",
        },
        {
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "flex": 1,
          },
          {
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#141414",
            },
            {
              "fontFamily": "Inter-SemiBold",
            },
            {
              "fontSize": 21.485714285714284,
              "includeFontPadding": false,
              "letterSpacing": 0,
            },
            {
              "marginLeft": 31.388235294117646,
            },
          ]
        }
      />
    </View>
    <View
      style={
        [
          {
            "flex": 1,
          },
          {
            "justifyContent": "space-evenly",
          },
          {
            "alignItems": "flex-end",
          },
          {
            "paddingRight": 31.388235294117646,
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#141414",
            },
            {
              "fontFamily": "Inter-SemiBold",
            },
            {
              "fontSize": 18.8,
              "includeFontPadding": false,
              "letterSpacing": 0,
            },
          ]
        }
      >
        $$0
      </Text>
      <Text
        style={
          [
            {
              "color": "#141414A3",
            },
            {
              "fontFamily": "Inter-SemiBold",
            },
            {
              "fontSize": 18.8,
              "includeFontPadding": false,
              "letterSpacing": 0,
            },
          ]
        }
      >
        0.00BTC BTC
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders correctly with required values only 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "height": 125.55294117647058,
        "width": "100%",
      },
      {
        "overflow": "hidden",
      },
      {
        "backgroundColor": "#DEF263",
      },
      {
        "justifyContent": "center",
      },
      false,
      undefined,
    ]
  }
  testID="cryptoListObject"
>
  <Text
    style={
      [
        {
          "color": "#1414141F",
        },
        {
          "fontFamily": "Inter-Black",
        },
        {
          "fontSize": 150.4,
          "includeFontPadding": false,
          "letterSpacing": -2,
          "lineHeight": 150.4,
          "marginLeft": -4,
          "marginTop": -8,
        },
      ]
    }
  >
    BTC
  </Text>
  <View
    style={
      [
        {
          "position": "absolute",
        },
        {
          "height": "100%",
          "width": "100%",
        },
        {
          "justifyContent": "center",
        },
        {
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "flex": 1,
          },
          {
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#141414",
            },
            {
              "fontFamily": "Inter-SemiBold",
            },
            {
              "fontSize": 21.485714285714284,
              "includeFontPadding": false,
              "letterSpacing": 0,
            },
            {
              "marginLeft": 31.388235294117646,
            },
          ]
        }
      >
        test crypto
      </Text>
    </View>
    <View
      style={
        [
          {
            "flex": 1,
          },
          {
            "justifyContent": "space-evenly",
          },
          {
            "alignItems": "flex-end",
          },
          {
            "paddingRight": 31.388235294117646,
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#141414",
            },
            {
              "fontFamily": "Inter-SemiBold",
            },
            {
              "fontSize": 18.8,
              "includeFontPadding": false,
              "letterSpacing": 0,
            },
          ]
        }
      >
        $1232134.33
      </Text>
      <Text
        style={
          [
            {
              "color": "#141414A3",
            },
            {
              "fontFamily": "Inter-SemiBold",
            },
            {
              "fontSize": 18.8,
              "includeFontPadding": false,
              "letterSpacing": 0,
            },
          ]
        }
      >
        12.123 BTC
      </Text>
    </View>
  </View>
</View>
`;
